--- a/task-2/index.html
+++ b/task-2/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stopwatch</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kode+Mono:wght@400..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Stopwatch</h1>
+    <h1>StopWatch</h1>
     <div class="container">
-        
         <div class="stopwatch">
-            
             <div id="display-container">
                 <div id="display">00:00:00.00</div>
             </div>
