--- a/task-2/index.html
+++ b/task-2/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>vClock</title>
+<title>Stop Watch</title>
 <link rel="stylesheet" href="styles.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -39,17 +39,15 @@
     <div class="content">
         <div class="clock" id="clock">
             <div class="time" id="time">
-                <span id="hours">00</span>:<span id="minutes">00</span>:<span id="seconds">00</span>.<span class="milliseconds" id="milliseconds">00</span>
+                <span id="hours">00</span>:<span id="minutes">00</span>:<span id="seconds">00</span>
             </div>
             <div class="buttons">
                 <button id="resetButton" onclick="resetTimer()">Reset</button>
                 <button id="pauseButton" class="pause-button" onclick="pauseTimer()">Pause</button>
                 <button id="startButton" onclick="startTimer()">Start</button>
                 <button id="lapButton" class="lap-button" onclick="lapTimer()">Lap</button>
-            </div>
-           
+            </div>           
         </div>
-       
     </div>
     <ul id="lapList"></ul>
     <script src="script.js"></script>
